--- a/templates/produtos/editar.html
+++ b/templates/produtos/editar.html
@@ -10,9 +10,38 @@
         <div class="card">
             <div class="card-body">
                 <form method="POST">
+                    <div class="row">
+                        <div class="col-md-8 mb-3">
+                            <label for="nome" class="form-label">Nome do Produto *</label>
+                            <input type="text" class="form-control" id="nome" name="nome" value="{{ produto.nome }}" required>
+                        </div>
+                        <div class="col-md-4 mb-3">
+                            <label for="categoria" class="form-label">Categoria</label>
+                            <select class="form-select" id="categoria" name="categoria">
+                                <option value="">Selecione...</option>
+                                <option value="Camisa" {% if produto.categoria == 'Camisa' %}selected{% endif %}>Camisa</option>
+                                <option value="Calça" {% if produto.categoria == 'Calça' %}selected{% endif %}>Calça</option>
+                                <option value="Bermuda" {% if produto.categoria == 'Bermuda' %}selected{% endif %}>Bermuda</option>
+                                <option value="Saia" {% if produto.categoria == 'Saia' %}selected{% endif %}>Saia</option>
+                                <option value="Agasalho" {% if produto.categoria == 'Agasalho' %}selected{% endif %}>Agasalho</option>
+                            </select>
+                        </div>
+                    </div>
+                    
                     <div class="mb-3">
-                        <label for="nome" class="form-label">Nome do Produto *</label>
-                        <input type="text" class="form-control" id="nome" name="nome" value="{{ produto.nome }}" required>
+                        <label for="descricao" class="form-label">Descrição</label>
+                        <textarea class="form-control" id="descricao" name="descricao" rows="3">{{ produto.descricao }}</textarea>
+                    </div>
+                    
+                    <div class="row">
+                        <div class="col-md-6 mb-3">
+                            <label for="tamanho" class="form-label">Tamanho</label>
+                            <input type="text" class="form-control" id="tamanho" name="tamanho" value="{{ produto.tamanho }}" placeholder="P, M, G, etc">
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            <label for="cor" class="form-label">Cor</label>
+                            <input type="text" class="form-control" id="cor" name="cor" value="{{ produto.cor }}">
+                        </div>
                     </div>
                     
                     <div class="row">
@@ -27,7 +56,7 @@
                     </div>
                     
                     <div class="d-flex justify-content-between mt-4">
-                        <a href="{{ url_for('produtos.vitrine') }}" class="btn btn-secondary">
+                        <a href="{{ url_for('produtos.listar') }}" class="btn btn-secondary">
                             <i class="bi bi-arrow-left"></i> Voltar
                         </a>
                         <button type="submit" class="btn btn-success">
