--- a/templates/gestores/editar.html
+++ b/templates/gestores/editar.html
@@ -11,33 +11,44 @@
       <div class="card-body">
         <form method="POST">
           <div class="row g-3">
-            <div class="col-md-6">
-              <label class="form-label">Nome *</label>
+            <!-- Nome (obrigatório) -->
+            <div class="col-md-12">
+              <label class="form-label">Nome Completo *</label>
               <input type="text" class="form-control" name="nome" value="{{ gestor.nome }}" required>
             </div>
+
+            <!-- Email -->
             <div class="col-md-6">
               <label class="form-label">Email</label>
               <input type="email" class="form-control" name="email" value="{{ gestor.email or '' }}">
             </div>
-            <div class="col-md-4">
+
+            <!-- Telefone -->
+            <div class="col-md-6">
               <label class="form-label">Telefone</label>
               <input type="text" class="form-control" name="telefone" value="{{ gestor.telefone or '' }}">
             </div>
-            <div class="col-md-4">
+
+            <!-- CPF -->
+            <div class="col-md-6">
               <label class="form-label">CPF</label>
               <input type="text" class="form-control" name="cpf" value="{{ gestor.cpf or '' }}">
             </div>
-            <div class="col-md-4">
+
+            <!-- Tipo de Gestor -->
+            <div class="col-md-6">
               <label class="form-label">Tipo de Gestor</label>
               <input type="text" class="form-control" name="tipo_gestor" value="{{ gestor.tipo_gestor or '' }}">
             </div>
           </div>
+
+          <!-- Botões -->
           <div class="d-flex justify-content-between mt-4">
             <a href="{{ url_for('gestores.listar', escola_id=gestor.escola_id) }}" class="btn btn-secondary">
               <i class="bi bi-arrow-left"></i> Voltar
             </a>
             <button type="submit" class="btn btn-success">
-              <i class="bi bi-check-circle"></i> Salvar
+              <i class="bi bi-check-circle"></i> Salvar Alterações
             </button>
           </div>
         </form>
